arrumado erros ortograficos

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -15,7 +15,7 @@
         <section class="secao1">
             <DIV class="container-secao1">
                 <h1>QUEM SOMOS</h1>
-                <p>A F4LIFE, nasceu para facilitar o acesso do jovem universitário moderno na busca e no preparo de sua moradia,  pois muitas vezes ele tem que mudar de cidade para buscar um diploma da profissional, pois o curso tão sonhado não existe em sua cidade, ou mesmo, por causa de distância entre sua residência e seu local de trabalho, acaba ficando mais comôdo ele se mudar para um local que fique próximo dos dois locais, para que fique mais fácil se deslocar. Contamos com uma equipe preparada para ajudá-lo com ótimas opções e até mesmo sugestões que vão desde moradias compartilhadas, kitinetes já prontas, e até mesmo uma novidade nesse ramo: kitinetes pré-prontas que serão personalizadas de acordo com o gosto de cada cliente.</p>
+                <p>A F4LIFE, nasceu para facilitar o acesso do jovem universitário moderno na busca e no preparo de sua moradia,  pois muitas vezes ele tem que mudar de cidade para buscar um diploma profissional, pois o curso tão sonhado não existe em sua cidade, ou mesmo, por causa de distância entre sua residência e seu local de trabalho, acaba ficando mais comôdo ele se mudar para um local que fique próximo dos dois locais, para que fique mais fácil se deslocar. Contamos com uma equipe preparada para ajudá-lo com ótimas opções e sugestões que vão desde moradias compartilhadas, kitinetes já prontas, e até mesmo uma novidade nesse ramo: kitinetes pré-prontas que serão personalizadas de acordo com o gosto de cada cliente.</p>
                 container-secao1
                 <div id="moradia-compartilhada">
                     <h2>Moradias compartilhadas</h2>
