criado footer com redes sociais e formulario de contato

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -16,7 +16,6 @@
             <DIV class="container-secao1">
                 <h1>QUEM SOMOS</h1>
                 <p>A F4LIFE, nasceu para facilitar o acesso do jovem universitário moderno na busca e no preparo de sua moradia,  pois muitas vezes ele tem que mudar de cidade para buscar um diploma profissional, pois o curso tão sonhado não existe em sua cidade, ou mesmo, por causa de distância entre sua residência e seu local de trabalho, acaba ficando mais comôdo ele se mudar para um local que fique próximo dos dois locais, para que fique mais fácil se deslocar. Contamos com uma equipe preparada para ajudá-lo com ótimas opções e sugestões que vão desde moradias compartilhadas, kitinetes já prontas, e até mesmo uma novidade nesse ramo: kitinetes pré-prontas que serão personalizadas de acordo com o gosto de cada cliente.</p>
-                container-secao1
                 <div id="moradia-compartilhada">
                     <h2>Moradias compartilhadas</h2>
                     <p> ambientes já prontos, para quem gosta de se enturmar e fazer amizades, com disponibilidade de mudança imediata, e valor mais acessível</p>
@@ -81,7 +80,28 @@
         </section>
 
         <footer>
-            <div> FOOTER </div>
+                <div class="redes-sociais">
+                    <a href="https://www.facebook.com">
+                        <h3>Facebook</h3>
+                        <img id="facebook" src="img/facebook.jpg">
+                    </a>
+                    <a href="http://www.instagram.com">
+                        <h3>Instagram</h3> 
+                        <img id="insta" src="img/instagram.png">
+                    </a>
+                </div>
+                    <div class="formulario-de-contato">
+                        <form action="" >
+                            <div><h3>Contato</h3></div>
+                            <div > Nome <input class="nome" type="text"; id="Nome"; name="nome"; placeholder="Digite seu nome completo"></div>
+                            <div> E-mail <input class="email" type="email" ; id="E-mail"; name="email"; placeholder="Digite seu e-mail"> </div>
+                            <div >
+                                <div>Assunto</div>
+                                <input class="assunto" type="text"; id="Assunto"; name="assunto"; placeholder="Digite sua solicitação">
+                            </div>
+                            <button id="botao-form" type="submit">Enviar</button>
+                        </form>
+                    </div>         
         </footer>
     </main>
 
