arrumado alguns erros de gramatica

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -44,7 +44,7 @@
         <section id="quem-somos" class="secao1">
             <DIV class="container-secao1">
                 <h1>QUEM SOMOS</h1>
-                <p>A F4LIFE, nasceu para facilitar o acesso do jovem universitário moderno na busca e no preparo de sua moradia,  pois muitas vezes ele tem que mudar de cidade para buscar um diploma profissional, pois o curso tão sonhado não existe em sua cidade, ou mesmo, por causa de distância entre sua residência e seu local de trabalho, acaba ficando mais comôdo ele se mudar para um local que fique próximo dos dois locais, para que fique mais fácil se deslocar. Contamos com uma equipe preparada para ajudá-lo com ótimas opções e sugestões que vão desde moradias compartilhadas, kitinetes já prontas, e até mesmo uma novidade nesse ramo: kitinetes pré-prontas que serão personalizadas de acordo com o gosto de cada cliente.</p>
+                <p>A F4LIFE, nasceu para facilitar o acesso do jovem universitário na busca, planejamento, preparo e personalização de sua moradia, pensando nisso, criamos a empresa para ajudá-lo nessa conquista, muitas vezes com a correria do dia a dia as pessoas não dispõem muito tempo para cuidar de si, o jovem universitário as vezes tem que mudar de cidade para buscar um diploma profissional, pois o curso tão sonhado não existe em sua cidade, ou mesmo, por causa de distância entre sua residência e seu local de trabalho e ou/estudos, acaba ficando mais comôdo para ele se mudar para um local que fique próximo dos dois locais, para que fique mais fácil seu deslocamento. Contamos com uma equipe preparada para ajudá-lo com ótimas opções e sugestões que vão desde moradias compartilhadas, kitinetes já prontas, e até mesmo uma novidade nesse ramo: kitinetes pré-prontas que serão personalizadas de acordo com o gosto de cada cliente.</p>
                 <div id="moradia-compartilhada">
                     <h2>Moradias compartilhadas</h2>
                     <p> ambientes já prontos, para quem gosta de se enturmar e fazer amizades, com disponibilidade de mudança imediata, e valor mais acessível</p>
@@ -65,30 +65,38 @@
 
                 <div class= "kits-personalizadas">
                     <h2>kitinetes personalizadas</h2>
-                    <p>ambientes pensados e totalmente pra quem além de privacidade e conforto, busca um ambiente pra chamar de seu, que na sua representação visual mostre sua identidade </p>
+                    <p>ambientes projetados totalmente pra quem além de privacidade e conforto, busca um ambiente pra chamar de seu, que na sua representação visual mostre sua identidade </p>
                     <div>
-                        <h3>futurista</h3>
+                        <h3>futurista
+                            <h4>Para aqueles que estão sempre antenados com o que há de mais moderno</h4>
+                        </h3>
                         <img src="./img/kitinetes/ambientes-personalizados/futurista/futurista.jpg" alt="imagem de ambiente futurista">
                         <img src="img/kitinetes/ambientes-personalizados/futurista/futurista2.jpg" alt="imagem de ambiente futurista">
                         <img src="img/kitinetes/ambientes-personalizados/futurista/futurista3.jpg" alt="imagem de ambiente futurista">
                         <img src="img/kitinetes/ambientes-personalizados/futurista/futurista4.jpg" alt="imagem de ambiente futurista">
                     </div>
                     <div>
-                        <h3>Musical</h3>
+                        <h3>Musical
+                            <h4>Para aqueles que adoram mostrar o bom gosto musical</h4>
+                        </h3>
                         <img src="img/kitinetes/ambientes-personalizados/musical/musical.jpg" alt="imagem de quartos com decoração musical">
                         <img src="img/kitinetes/ambientes-personalizados/musical/musical2.jpg" alt="imagem de quartos com decoração musical">
                         <img src="img/kitinetes/ambientes-personalizados/musical/musical3.jpg" alt="imagem de quartos com decoração musical">
                         <img src="img/kitinetes/ambientes-personalizados/musical/musical4.jpg" alt="imagem de quartos com decoração musical">
                     </div>
                     <div>
-                        <h3>Natureza</h3>
+                        <h3>Natureza
+                            <h4> Para aqueles que curtem um rolê ao ar livre e um ambiente mais calmo</h4>
+                        </h3>
                         <img src="img/kitinetes/ambientes-personalizados/natureza/natureza.jpg" alt="imagem de quarto com decoração natureza">
                         <img src="img/kitinetes/ambientes-personalizados/natureza/natureza2.jpg" alt="imagem de quarto com decoração natureza">
                         <img src="img/kitinetes/ambientes-personalizados/natureza/natureza3.jpg" alt="imagem de quarto com decoração natureza">
                         <img src="img/kitinetes/ambientes-personalizados/natureza/natureza4.jpg" alt="imagem de quarto com decoração natureza">
                     </div>
                     <div>
-                        <h3>Vingadores</h3>
+                        <h3>Vingadores
+                            <h4>Para aqueles que adoram cinema de filmes de heróis</h4>
+                        </h3>
                         <img src="img/kitinetes/ambientes-personalizados/vingadores/quarto-vingadores.jpg" alt="imagem de quarto com decoração vingadores">
                         <img src="img/kitinetes/ambientes-personalizados/vingadores/quarto-vingadores2.jpg" alt="imagem de quarto com decoração vingadores">
                         <img src="img/kitinetes/ambientes-personalizados/vingadores/quarto-vingadores3.jpg" alt="imagem de quarto com decoração vingadores">
@@ -106,7 +114,7 @@
 
         <section id="contact">
             
-                <form action="" class="form" >
+                <form action="" class="form" > <h2>Contato</h2>
                     <input type="text" name="nome" class="input" placeholder="Insira Seu Nome">
                     <input type="email" name="email" class="input" placeholder="Insira seu E-mail">
                     <textarea name="msg" id="msg" cols="30" rows="10" 
