--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -13,8 +13,8 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#quem-somos">Quem somos</a></li>
-          <li><a href="#Trabalhe-conosco">Trabalhe conosco</a></li>
-          <li><a href="#Nosso-time"> Nosso time </a></li>
+          <li><a href="#trabalhe-conosco">Trabalhe conosco</a></li>
+          <li><a href="#nosso-time"> Nosso time </a></li>
           <li><a href="#contact">Contato</a></li>
   
         </ul>
